# signals_and_system

./: .gitignore  CMakeLists.txt  Makefile  README.md  install.sh  main.c  sound.raw
lib/: complex_util.c  complex_util.h  fft.c  fft.h  play.c  play.h  record.c  record.h  util.c  util.h
